# nb-refacored

./: .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml
blob_store_stub/models/: encoder.pkl  some_model.pkl
blob_store_stub/parameters/: best_params.txt
blob_store_stub/reports/: report.txt
config/: hyperparams.json
docker/: Dockerfile.serve  Dockerfile.train
notebooks/: modeling_starter_modified.ipynb
source/: __init__.py  data_processing.py  models.py  serve.py  settings.py  train_run.py  trainer.py
test/: test_data_processing.py  test_serving.py  test_trainer.py
